Converted to Electron-Forge project

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<script>
 const {ipcRenderer} = require('electron');
 window.ipcRenderer = ipcRenderer;
-React = require('react');
-ReactDOM = require('react-dom');
+window.React = require('react');
+window.ReactDOM = require('react-dom');
 window._ = require('underscore');
 const {MuiThemeProvider} = require('material-ui/styles');
 window.MuiThemeProvider = MuiThemeProvider;
